Revert "fix animated title line jump"
This reverts commit c7a21445728c97d9e121f7d6d0177888f806ade9.

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,16 +1,23 @@
-@keyframes fadeIn {
+@keyframes transitionIn {
     0% {
         opacity: 0;
+        transform: rotateX(-10deg);
     }
+
+    /* 50% {
+        opacity: 0;
+        transform: rotateX(-10deg);
+    } */
 
     100% {
         opacity: 1;
+        transform: rotateX(0);
     }
 
 }
 
 .home-fade {
-    animation: fadeIn 2s;
+    animation: transitionIn 1s;
 }
 
 .hero-image {
